test_regress/t/t_func_recurse_param.out
%Error-UNSUPPORTED: t/t_func_recurse_param.v:12:31: Unsupported: Recursive function call 'recurse_self'
   12 |       else recurse_self = i + recurse_self(i - 1) * 2;
      |                               ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
